<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/item_home" />

        <item
            android:id="@+id/item_favourite"
            android:checked="false"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/item_favourite" />

        <item
            android:id="@+id/item_group"
            android:checked="false"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/item_group" />

        <item
            android:id="@+id/item_tracker"
            android:checked="false"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/item_tracker" />

    </group>
</menu>