<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"

    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:background="@color/window_view_background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/media_play_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <LinearLayout
            android:id="@+id/media_load_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_error_permission"
                android:textAlignment="center"
                android:textColor="@color/font_normal"
                android:textSize="@dimen/sp16" />

            <Button
                android:id="@+id/music_rebuild_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/music_error_rebuild_permission" />

        </LinearLayout>

        <include layout="@layout/layout_loading" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dp40"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp5"
        android:paddingBottom="@dimen/dp5">

        <TextView
            android:id="@+id/tv_music_now_play"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/tv_music_now_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"
            android:layout_weight="0.4"
            android:gravity="right"
            android:textColor="@color/text_gray" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_music_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_music_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_play" />

            <Button
                android:id="@+id/bt_music_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_pause" />

            <Button
                android:id="@+id/bt_music_goPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_go_play" />

            <Button
                android:id="@+id/bt_music_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_next" />

            <Button
                android:id="@+id/bt_music_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_prev" />

            <Button
                android:id="@+id/bt_music_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_stop" />

            <Button
                android:id="@+id/bt_music_loop_listener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_loop" />

            <Button
                android:id="@+id/bt_music_random_listener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_random" />

            <Button
                android:id="@+id/bt_music_over_loop_listener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_over_loop" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>