<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include layout="@layout/layout_loading" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_bottom_pop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_pop" />

                <Button
                    android:id="@+id/btn_left_pop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_pop" />

                <Button
                    android:id="@+id/btn_right_pop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right_pop" />

                <Button
                    android:id="@+id/btn_pop_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_menu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_bottom_sheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_sheet" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</LinearLayout>