<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_view_background"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/logo_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16">

        <ImageView
            android:id="@+id/iv_icon_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_22" />

        <ImageView
            android:id="@+id/iv_icon_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_bili_logo" />

        <ImageView
            android:id="@+id/iv_icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_33" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/username_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp5"
        android:background="@drawable/db_edit_check"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginStart="@dimen/dp10"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_login_username_default"
            android:drawablePadding="@dimen/dp10"
            android:drawableStart="@drawable/ic_login_username_default"
            android:hint="@string/login_hint_account"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/edit_un_check"
            android:textColorHint="@color/edit_un_check"
            android:textCursorDrawable="@drawable/db_edit_cursor"
            android:textSize="@dimen/sp16" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/password_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/db_edit_check"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginStart="@dimen/dp10"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_login_password_default"
            android:drawablePadding="@dimen/dp12"
            android:drawableStart="@drawable/ic_login_password_default"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/edit_un_check"
            android:textColorHint="@color/edit_un_check"
            android:textCursorDrawable="@drawable/db_edit_cursor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            android:layout_weight="1"
            android:background="@drawable/db_line_press_btn"
            android:gravity="center"
            android:text="@string/register_btn"
            android:textColor="@color/text_default"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            android:layout_weight="1"
            android:background="@drawable/db_press_btn"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textColor="@color/text_white"
            android:textSize="@dimen/sp16" />
    </LinearLayout>


</LinearLayout>